# scribe

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.kamal/: secrets
config/: deploy.yml
docs/: parakeet-vocab-biasing-plan.md  pending-validation.md
docs/superpowers/plans/: 2026-07-07-scribe-implementation.md  2026-07-07-scribe-native-implementation.md  2026-07-07-susurro-implementation.md
docs/superpowers/specs/: 2026-07-06-scribe-dictation-app-design.md  2026-07-06-susurro-dictation-app-design.md  2026-07-07-scribe-native-design.md  2026-07-09-model-store-and-custom-cleanup-model-design.md
native/: SPIKE-RESULTS.md  project.yml
native/Resources/: AppIcon.icns
native/Sources/Scribe/: AppSettings.swift  AppSupport.swift  AudioDevices.swift  BiasVocabulary.swift  CleanupPrompt.swift  DictionaryWindow.swift  EngineSwitch.swift  EngineeringVocabulary.swift  Gates.swift  GemmaBackend.swift  GlossaryHarvester.swift  History.swift  HotkeyMonitor.swift  IdleTracker.swift  KeyStateMachine.swift  MenuBarView.swift  ModelStore.swift  OnboardingState.swift  OnboardingWindow.swift  PasteAdapters.swift  PasteCore.swift  Pipeline.swift  Protocols.swift  Recorder.swift  RingBuffer.swift  ScribeApp.swift  SttEngines.swift  TermReplacer.swift  UserDictionary.swift
resources/: dev.esoto.scribe.plist.template  dev.esoto.susurro.plist.template
scripts/: package_app.sh  probe_hotkey.py
site/: Dockerfile  index.html
src/scribe/: __main__.py  app.py  config.py  doctor.py  history.py  hotkey.py  idle.py  menubar.py  mlx_thread.py  pipeline.py  recorder.py
src/scribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/susurro/: __main__.py  app.py  config.py  doctor.py  gates.py  hotkey.py  menubar.py  paste.py  pipeline.py
src/susurro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: fakes.py  test_cleanup_base.py  test_config.py  test_doctor.py  test_gates.py  test_history.py  test_hotkey.py  test_idle.py  test_menubar_helpers.py  test_mlx_thread.py  test_paste.py  test_pipeline.py  test_recorder.py  test_scaffold.py  test_whisper_segments.py
tests_models/: conftest.py  golden.json  run_eval.py  test_cleanup_gemma.py  test_stt_fixtures.py
(+46 files in other folders)
