[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "susurro"
version = "0.1.0"
description = "Local hold-to-talk dictation for macOS (Parakeet/Whisper + Gemma cleanup)"
requires-python = ">=3.12"
dependencies = [
  "mlx>=0.31",
  "parakeet-mlx==0.5.2",
  "mlx-whisper==0.4.3",
  "mlx-lm==0.31.3",
  # transformers 5.13 breaks mlx-lm 0.31.3's gemma3 auto-registration
  # (AttributeError in auto_factory); 5.5.x verified working 2026-07-07.
  "transformers>=5.5,<5.6",
  "numpy>=2.0",
  "sounddevice>=0.5",
  "rumps>=0.4",
  "pyobjc-framework-Quartz>=11",
  "pyobjc-framework-AVFoundation>=11",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=6"]

[project.scripts]
susurro = "susurro.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["models: needs local MLX models (make test-models)"]

[tool.coverage.run]
source = ["susurro"]
# Composition root and model adapters: 100% OS/MLX glue, exercised by
# tests_models and manual use, not unit tests (spec §7 seam rule).
omit = [
  "*/susurro/app.py",
  "*/susurro/__main__.py",
  "*/susurro/stt/parakeet.py",
  "*/susurro/cleanup/mlx_lm.py",
]

[tool.coverage.report]
fail_under = 95
exclude_also = ["pragma: no cover", "if __name__ =="]
